--- a/index.html
+++ b/index.html
@@ -107,30 +107,30 @@ footer{
 <body>
   <div class="container">
     <h1>🎮 Oyunlar</h1>
-    <div class="subtitle">Bir oyunu seç ve başla</div>
+    <div class="subtitle">Oyun Seç ve Başla</div>
 
     <div class="grid">
       <a class="card" href="./edebiyat/">
         <h2>📚 Edebiyat</h2>
-        <p>Edebiyat bilgi ve quiz oyunu</p>
+        <p>Yazar-Eser | +1000 Soru</p>
         <div class="tag">Edebiyat</div>
       </a>
 
       <a class="card" href="./tarih/">
         <h2>🏛️ Tarih</h2>
-        <p>Tarih konuları ve soru oyunları</p>
+        <p>Tarih | +500 Soru ( Şimdilik )</p>
         <div class="tag">Tarih</div>
       </a>
 
       <a class="card" href="./biyoloji/">
         <h2>🧬 Biyoloji</h2>
-        <p>Biyoloji öğrenme ve test oyunu</p>
+        <p>Sistemler | +1000 Soru</p>
         <div class="tag">Biyoloji</div>
       </a>
     </div>
 
     <footer>
-      © atillaaykac | GitHub Pages
+      © atillaaykac | Rehberlik
     </footer>
   </div>
 </body>
