--- a/index.html
+++ b/index.html
@@ -1,231 +1,267 @@
 <!doctype html>
 <html lang="tr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Oyunlar</title>
 
 <style>
-*{box-sizing:border-box}
-:root{
-  --line:#243043;
-  --text:#e5e7eb;
-  --muted:#9ca3af;
-}
+  *{box-sizing:border-box}
+  :root{
+    --text:#e5e7eb;
+    --muted:#9ca3af;
+    --line:rgba(148,163,184,.18);
+    --card1:rgba(17,24,39,.80);
+    --card2:rgba(15,23,42,.70);
+  }
 
-/* Hareketli arka plan */
-@keyframes bgMove{
-  0%   {background-position: 0% 50%, 100% 50%, 0 0;}
-  50%  {background-position: 100% 50%, 0% 50%, 0 0;}
-  100% {background-position: 0% 50%, 100% 50%, 0 0;}
-}
+  body{
+    margin:0;
+    min-height:100vh;
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
+    color:var(--text);
+    overflow:hidden;
+    background:#050814;
+  }
 
-/* Parlayan “blob”lar */
-@keyframes floatA{
-  0%{transform:translate(-10px,-10px) scale(1)}
-  50%{transform:translate(25px,15px) scale(1.08)}
-  100%{transform:translate(-10px,-10px) scale(1)}
-}
-@keyframes floatB{
-  0%{transform:translate(10px,10px) scale(1)}
-  50%{transform:translate(-20px,18px) scale(1.12)}
-  100%{transform:translate(10px,10px) scale(1)}
-}
+  /* ===== VIDEO BACKGROUND ===== */
+  .bg{
+    position:fixed;
+    inset:0;
+    z-index:-3;
+    background:#050814;
+  }
+  .bg video{
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    filter:saturate(1.08) contrast(1.08) brightness(.72);
+    transform:scale(1.02);
+  }
 
-body{
-  margin:0;
-  min-height:100vh;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;
-  color:var(--text);
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  /* Video üstüne karartma + vignette */
+  .shade{
+    position:fixed;
+    inset:0;
+    z-index:-2;
+    background:
+      radial-gradient(1200px 700px at 50% 35%, rgba(255,255,255,.06), transparent 55%),
+      radial-gradient(900px 520px at 20% 20%, rgba(124,58,237,.12), transparent 60%),
+      radial-gradient(900px 520px at 80% 25%, rgba(34,197,94,.10), transparent 60%),
+      linear-gradient(180deg, rgba(2,6,23,.45), rgba(2,6,23,.78));
+  }
+  .vignette{
+    position:fixed;
+    inset:-40px;
+    z-index:-1;
+    pointer-events:none;
+    background:radial-gradient(circle at 50% 40%, transparent 45%, rgba(0,0,0,.62) 85%);
+  }
 
-  background:
-    radial-gradient(900px 520px at 10% 10%, rgba(124,58,237,.36), transparent 62%),
-    radial-gradient(1000px 560px at 90% 18%, rgba(34,197,94,.30), transparent 62%),
-    linear-gradient(180deg,#0b0f18,#020617);
-  background-size: 200% 200%, 200% 200%, 100% 100%;
-  animation:bgMove 18s ease-in-out infinite;
-  overflow-x:hidden;
-}
+  /* ===== STAR OVERLAY (parlama + kayan yıldızlar) ===== */
+  .stars{
+    position:fixed;
+    inset:0;
+    z-index:-1;
+    pointer-events:none;
+    opacity:.9;
+  }
 
-/* Arka plandaki ekstra efekt katmanı */
-.bgFX{
-  position:fixed;
-  inset:-80px;
-  pointer-events:none;
-  z-index:0;
-}
+  /* ufak twinkle noktaları */
+  .stars::before{
+    content:"";
+    position:absolute;
+    inset:0;
+    background:
+      radial-gradient(1px 1px at 12% 18%, rgba(255,255,255,.9), transparent 60%),
+      radial-gradient(1px 1px at 28% 62%, rgba(255,255,255,.8), transparent 60%),
+      radial-gradient(1px 1px at 44% 28%, rgba(255,255,255,.7), transparent 60%),
+      radial-gradient(1px 1px at 58% 78%, rgba(255,255,255,.85), transparent 60%),
+      radial-gradient(1px 1px at 67% 34%, rgba(255,255,255,.75), transparent 60%),
+      radial-gradient(1px 1px at 76% 56%, rgba(255,255,255,.7), transparent 60%),
+      radial-gradient(1px 1px at 86% 22%, rgba(255,255,255,.85), transparent 60%),
+      radial-gradient(1px 1px at 92% 72%, rgba(255,255,255,.75), transparent 60%),
+      radial-gradient(2px 2px at 20% 40%, rgba(255,255,255,.35), transparent 65%),
+      radial-gradient(2px 2px at 72% 18%, rgba(255,255,255,.30), transparent 65%),
+      radial-gradient(2px 2px at 84% 44%, rgba(255,255,255,.25), transparent 65%);
+    animation: twinkle 3.6s ease-in-out infinite;
+  }
 
-/* İki tane yumuşak parlayan top */
-.bgFX::before,
-.bgFX::after{
-  content:"";
-  position:absolute;
-  width:520px;
-  height:520px;
-  border-radius:50%;
-  filter: blur(50px);
-  opacity:.55;
-}
+  @keyframes twinkle{
+    0%,100%{opacity:.55; filter:blur(.2px)}
+    50%{opacity:1; filter:blur(0px)}
+  }
 
-.bgFX::before{
-  left:6%;
-  top:18%;
-  background:radial-gradient(circle at 30% 30%, rgba(124,58,237,.90), rgba(124,58,237,0) 65%);
-  animation:floatA 10s ease-in-out infinite;
-}
+  /* kayan yıldızlar */
+  .shooting{
+    position:absolute;
+    inset:0;
+    overflow:hidden;
+  }
+  .shooting span{
+    position:absolute;
+    width:180px;
+    height:2px;
+    background:linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,.9), rgba(255,255,255,0));
+    opacity:0;
+    transform:rotate(-18deg);
+    filter:blur(.2px);
+    animation: shoot 6.5s linear infinite;
+  }
+  .shooting span:nth-child(1){ top:12%; left:-30%; animation-delay: .8s;  }
+  .shooting span:nth-child(2){ top:34%; left:-40%; animation-delay: 2.4s; width:220px; }
+  .shooting span:nth-child(3){ top:58%; left:-50%; animation-delay: 3.9s; width:200px; }
+  .shooting span:nth-child(4){ top:76%; left:-35%; animation-delay: 5.3s; width:240px; }
 
-.bgFX::after{
-  right:6%;
-  bottom:12%;
-  background:radial-gradient(circle at 30% 30%, rgba(34,197,94,.85), rgba(34,197,94,0) 65%);
-  animation:floatB 12s ease-in-out infinite;
-}
+  @keyframes shoot{
+    0%   {opacity:0; transform:translateX(0) translateY(0) rotate(-18deg)}
+    8%   {opacity:.95}
+    16%  {opacity:0}
+    100% {opacity:0; transform:translateX(170vw) translateY(30vh) rotate(-18deg)}
+  }
 
-/* İnce “noise” dokusu (çok hafif) */
-.noise{
-  position:fixed;
-  inset:0;
-  pointer-events:none;
-  z-index:0;
-  opacity:.07;
-  background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.8' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='120' height='120' filter='url(%23n)' opacity='.9'/%3E%3C/svg%3E");
-}
+  /* ===== CONTENT ===== */
+  .container{
+    width:min(1040px,92vw);
+    margin:0 auto;
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    padding:28px 0;
+  }
+  .panel{
+    width:100%;
+    padding:28px;
+    border-radius:24px;
+    border:1px solid var(--line);
+    background:linear-gradient(180deg, rgba(2,6,23,.45), rgba(2,6,23,.55));
+    backdrop-filter: blur(10px);
+    box-shadow:0 28px 70px rgba(0,0,0,.45);
+  }
+  .header{
+    text-align:center;
+    margin-bottom:28px;
+  }
+  h1{
+    margin:0 0 8px;
+    font-size:44px;
+    letter-spacing:.3px;
+  }
+  .subtitle{
+    margin:0;
+    color:var(--muted);
+    font-size:15px;
+  }
 
-/* İçerik */
-.container{
-  width:min(1040px,92vw);
-  position:relative;
-  z-index:1;
-}
+  .grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+    gap:18px;
+  }
+  .card{
+    position:relative;
+    display:block;
+    padding:22px;
+    border-radius:20px;
+    text-decoration:none;
+    color:var(--text);
+    border:1px solid var(--line);
+    background:linear-gradient(180deg, var(--card1), var(--card2));
+    box-shadow:0 18px 40px rgba(0,0,0,.35);
+    overflow:hidden;
+    transition:transform .22s ease, border-color .22s ease;
+  }
+  .card::before{
+    content:"";
+    position:absolute;
+    inset:-2px;
+    background:linear-gradient(120deg, transparent, rgba(255,255,255,.10), transparent);
+    transform:translateX(-120%);
+    transition:transform .45s ease;
+  }
+  .card:hover{
+    transform:translateY(-7px) scale(1.02);
+    border-color:rgba(255,255,255,.26);
+  }
+  .card:hover::before{
+    transform:translateX(120%);
+  }
+  .card h2{margin:0 0 10px; font-size:26px}
+  .card p{margin:0; color:#cbd5e1; line-height:1.55}
+  .tag{
+    display:inline-block;
+    margin-top:14px;
+    padding:6px 12px;
+    border-radius:999px;
+    font-size:12px;
+    color:#cbd5e1;
+    background:rgba(15,23,42,.55);
+    border:1px solid rgba(148,163,184,.20);
+  }
+  footer{
+    margin-top:18px;
+    text-align:center;
+    font-size:13px;
+    color:#94a3b8;
+    opacity:.8;
+  }
 
-.header{
-  text-align:center;
-  margin-bottom:34px;
-}
-
-h1{
-  margin:0 0 10px;
-  font-size:42px;
-  letter-spacing:.3px;
-}
-
-.subtitle{
-  margin:0;
-  color:var(--muted);
-  font-size:15px;
-}
-
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:22px;
-}
-
-/* Kartlar */
-.card{
-  position:relative;
-  display:block;
-  text-decoration:none;
-  color:var(--text);
-  padding:26px;
-  border-radius:20px;
-  border:1px solid var(--line);
-  background:linear-gradient(180deg, rgba(17,24,39,.92), rgba(15,23,42,.88));
-  box-shadow:0 18px 40px rgba(0,0,0,.38);
-  overflow:hidden;
-  transition:transform .22s ease, border-color .22s ease;
-}
-
-.card::before{
-  content:"";
-  position:absolute;
-  inset:-2px;
-  background:linear-gradient(120deg, transparent, rgba(255,255,255,.10), transparent);
-  transform:translateX(-110%);
-  transition:transform .45s ease;
-}
-
-.card:hover{
-  transform:translateY(-7px) scale(1.02);
-  border-color:rgba(124,58,237,.9);
-}
-
-.card:hover::before{
-  transform:translateX(110%);
-}
-
-.card h2{
-  margin:0 0 10px;
-  font-size:26px;
-}
-
-.card p{
-  margin:0;
-  color:#cbd5e1;
-  line-height:1.55;
-}
-
-.tag{
-  display:inline-block;
-  margin-top:16px;
-  font-size:12px;
-  padding:6px 12px;
-  border-radius:999px;
-  background:rgba(31,41,55,.85);
-  color:#9ca3af;
-  border:1px solid rgba(36,48,67,.8);
-}
-
-/* Footer */
-footer{
-  margin-top:34px;
-  text-align:center;
-  font-size:13px;
-  color:#6b7280;
-}
-
-/* Mobilde biraz küçült */
-@media (max-width:480px){
-  h1{font-size:34px}
-  .card{padding:22px}
-}
+  @media (max-width:480px){
+    h1{font-size:34px}
+    .panel{padding:22px}
+    .card{padding:20px}
+  }
 </style>
 </head>
 
 <body>
-  <div class="bgFX"></div>
-  <div class="noise"></div>
+  <div class="bg">
+    <video autoplay muted loop playsinline preload="auto">
+      <source src="./space.mp4" type="video/mp4" />
+    </video>
+  </div>
 
-  <main class="container">
-    <div class="header">
-      <h1>🎮 Oyunlar</h1>
-      <p class="subtitle">Bir oyunu seç ve başla</p>
+  <div class="shade"></div>
+  <div class="vignette"></div>
+
+  <div class="stars">
+    <div class="shooting">
+      <span></span><span></span><span></span><span></span>
     </div>
+  </div>
 
-    <section class="grid">
-      <a class="card" href="./edebiyat/">
-        <h2>📚 Edebiyat</h2>
-        <p>Edebiyat bilgi ve quiz oyunu</p>
-        <div class="tag">Klasör: /edebiyat</div>
-      </a>
+  <div class="container">
+    <div class="panel">
+      <div class="header">
+        <h1>🌌 Oyunlar</h1>
+        <p class="subtitle">Bir oyunu seç ve başla</p>
+      </div>
 
-      <a class="card" href="./tarih/">
-        <h2>🏛️ Tarih</h2>
-        <p>Tarih konuları ve soru oyunları</p>
-        <div class="tag">Klasör: /tarih</div>
-      </a>
+      <section class="grid">
+        <a class="card" href="./edebiyat/">
+          <h2>📚 Edebiyat</h2>
+          <p>Edebiyat bilgi ve quiz oyunu</p>
+          <div class="tag">Klasör: /edebiyat</div>
+        </a>
 
-      <a class="card" href="./biyoloji/">
-        <h2>🧬 Biyoloji</h2>
-        <p>Biyoloji öğrenme ve test oyunu</p>
-        <div class="tag">Klasör: /biyoloji</div>
-      </a>
-    </section>
+        <a class="card" href="./tarih/">
+          <h2>🏛️ Tarih</h2>
+          <p>Tarih konuları ve soru oyunları</p>
+          <div class="tag">Klasör: /tarih</div>
+        </a>
 
-    <footer>© atillaaykac | GitHub Pages</footer>
-  </main>
+        <a class="card" href="./biyoloji/">
+          <h2>🧬 Biyoloji</h2>
+          <p>Biyoloji öğrenme ve test oyunu</p>
+          <div class="tag">Klasör: /biyoloji</div>
+        </a>
+      </section>
+
+      <footer>© atillaaykac | GitHub Pages</footer>
+    </div>
+  </div>
 </body>
 </html>
