--- a/index.html
+++ b/index.html
@@ -237,30 +237,30 @@
     <div class="panel">
       <div class="header">
         <h1>🌌 Oyunlar</h1>
-        <p class="subtitle">Bir oyunu seç ve başla</p>
+        <p class="subtitle">Oyun Seç ve Başla!</p>
       </div>
 
       <section class="grid">
         <a class="card" href="./edebiyat/">
           <h2>📚 Edebiyat</h2>
-          <p>Edebiyat bilgi ve quiz oyunu</p>
+          <p>Yazar-Eser | +1000 Soru</p>
           <div class="tag">Klasör: /edebiyat</div>
         </a>
 
         <a class="card" href="./tarih/">
           <h2>🏛️ Tarih</h2>
-          <p>Tarih konuları ve soru oyunları</p>
+          <p>Tarih | +500 Soru</p>
           <div class="tag">Klasör: /tarih</div>
         </a>
 
         <a class="card" href="./biyoloji/">
           <h2>🧬 Biyoloji</h2>
-          <p>Biyoloji öğrenme ve test oyunu</p>
+          <p>Sistemler | +1000 Soru</p>
           <div class="tag">Klasör: /biyoloji</div>
         </a>
       </section>
 
-      <footer>© atillaaykac | GitHub Pages</footer>
+      <footer>Atilla Aykaç | Rehberlik</footer>
     </div>
   </div>
 </body>
