--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   <div class="container">
     <div class="panel">
       <div class="header">
-        <h1>🌌 Oyunlar</h1>
+        <h1>Oyunlar</h1>
         <p class="subtitle">Oyun Seç ve Başla!</p>
       </div>
 
