--- a/index.html
+++ b/index.html
@@ -244,19 +244,19 @@
         <a class="card" href="./edebiyat/">
           <h2>📚 Edebiyat</h2>
           <p>Yazar-Eser | +1000 Soru</p>
-          <div class="tag">Klasör: /edebiyat</div>
+          <div class="tag">Yazar-Eser</div>
         </a>
 
         <a class="card" href="./tarih/">
           <h2>🏛️ Tarih</h2>
           <p>Tarih | +500 Soru</p>
-          <div class="tag">Klasör: /tarih</div>
+          <div class="tag">AYT Tarih</div>
         </a>
 
         <a class="card" href="./biyoloji/">
           <h2>🧬 Biyoloji</h2>
           <p>Sistemler | +1000 Soru</p>
-          <div class="tag">Klasör: /biyoloji</div>
+          <div class="tag">Sistemler</div>
         </a>
       </section>
 
