--- a/index.html
+++ b/index.html
@@ -252,6 +252,12 @@
           <p>Tarih | +500 Soru</p>
           <div class="tag">AYT Tarih</div>
         </a>
+       
+       <a class="card" href="./cografya/">
+       <h2>🌍 Coğrafya</h2>
+       <p>Bölgeler-Ülkeler-Ekonomi | +500 Soru</p>
+       <div class="tag">AYT Coğrafya</div>
+        </a>
 
         <a class="card" href="./biyoloji/">
           <h2>🧬 Biyoloji</h2>
